--- a/package.json
+++ b/package.json
@@ -14,9 +14,19 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@fontsource/exo": "^4.2.2",
+    "@fontsource/lato": "^4.2.2",
+    "@fontsource/open-sans": "^4.2.2",
+    "@fontsource/oswald": "^4.2.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^3.2.1",
+    "gatsby-plugin-styled-components": "^4.2.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "prettier": "2.2.1"
