--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fontsource/oswald": "^4.2.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^3.2.1",
@@ -28,6 +29,7 @@
     "gatsby-transformer-remark": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-toggle": "^4.1.2",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
